RESOLVED FIXED25598
AX: if a radio button has a label and a title, the label is not exposed
https://bugs.webkit.org/show_bug.cgi?id=25598
Summary AX: if a radio button has a label and a title, the label is not exposed
chris fleizach
Reported 2009-05-06 14:40:17 PDT
if you have a radio button that uses the title attribute and also has a label, the label does not get exposed
Attachments
patch (6.35 KB, patch)
2009-05-06 14:43 PDT, chris fleizach
bdakin: review+
chris fleizach
Comment 1 2009-05-06 14:43:00 PDT
chris fleizach
Comment 2 2009-05-07 09:01:18 PDT
Note You need to log in before you can comment on or make changes to this bug.