Bug 25598: AX: if a radio button has a label and a title, the label is not exposed https://bugs.webkit.org/show_bug.cgi?id=25598

Canonical link: https://commits.webkit.org/35368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43345 268f45cc-cd09-0410-ab3c-d52691b4dbfc